...
          'Panel de Administración',
          style: textStyles.headlineMedium.copyWith(color: colors.white),
        ),
        actions: [
          IconButton(
            icon: const Icon(Icons.logout),
            tooltip: 'Cerrar sesión',
            onPressed: () async {
              await authProvider.logoutAndClearAllData(context);
            },
          ),
        ],
      ),
...
